Update workflow name

--- a/.github/workflows/publish_crawler.yml
+++ b/.github/workflows/publish_crawler.yml
@@ -3,7 +3,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Create and publish Crawler image
+name: Publish Crawler image
 
 on:
   push:
