--- a/.github/workflows/publish_web.yml
+++ b/.github/workflows/publish_web.yml
@@ -3,7 +3,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Create and publish BlazorWeb image
+name: Publish BlazorWeb image
 
 on:
   push:
