--- a/.github/workflows/publish_crawler.yml
+++ b/.github/workflows/publish_crawler.yml
@@ -53,7 +53,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./BlazorWeb/Dockerfile
+          file: ./Crawler/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
