--- a/.github/workflows/publish_web.yml
+++ b/.github/workflows/publish_web.yml
@@ -44,7 +44,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=ref,event=branch,suffix=-{{date 'YYYYMMDD-HHmmss'}}
+            type=semver,pattern={{version}}
           
 
       - name: Build and push Docker image
